camper-project-minecraft-animals/rhg/terminal
pi@raspberrypi ~ $ ifconfig
eth0      Link encap:Ethernet  HWaddr b8:27:eb:bc:06:4d  
          inet addr:10.0.1.150  Bcast:10.0.1.255  Mask:255.255.255.0
          UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1
          RX packets:39924 errors:0 dropped:0 overruns:0 frame:0
          TX packets:916 errors:0 dropped:0 overruns:0 carrier:0
          collisions:0 txqueuelen:1000 
          RX bytes:3295017 (3.1 MiB)  TX bytes:71360 (69.6 KiB)

lo        Link encap:Local Loopback  
          inet addr:127.0.0.1  Mask:255.0.0.0
          UP LOOPBACK RUNNING  MTU:16436  Metric:1
          RX packets:0 errors:0 dropped:0 overruns:0 frame:0
          TX packets:0 errors:0 dropped:0 overruns:0 carrier:0
          collisions:0 txqueuelen:0 
          RX bytes:0 (0.0 B)  TX bytes:0 (0.0 B)

pi@raspberrypi ~ $ python
Python 2.7.3 (default, Jan 13 2013, 11:20:46) 
[GCC 4.6.3] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> from turtle inport *
  File "<stdin>", line 1
    from turtle inport *
                     ^
SyntaxError: invalid syntax
>>> from turtle import *
>>> print hello
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'hello' is not defined
>>> print "Hello"
Hello
>>> print "hi"
hi
>>> pr 12=12
  File "<stdin>", line 1
    pr 12=12
        ^
SyntaxError: invalid syntax
>>> pr12+12
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pr12' is not defined
>>> print 12+12
24
>>> draw 
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'draw' is not defined
>>> forward 100
  File "<stdin>", line 1
    forward 100
              ^
SyntaxError: invalid syntax
>>> right 90
  File "<stdin>", line 1
    right 90
           ^
SyntaxError: invalid syntax
>>> forward(100)
>>> right(90)
>>> backward(50)
>>> left(30)
>>> forward(60)
>>> forward(10)
>>> left(30)
>>> right(60)
>>> right(30)
>>> forward(70)
>>> right(60)
>>> right(90)
>>> forward(50)
>>> left(90)
>>> forward(100)
>>> right(90)
>>> forward(25)
>>> clear()
>>> reset()
>>> forward(90)
>>> right(144)
>>> forward(90)
>>> right(144)
>>> forward(90)
>>> right(144)
>>> forward(90)
>>> right(144)
>>> forward(90)
>>> right(144)
>>> reset
<function reset at 0xb6a49f30>
>>> restet()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'restet' is not defined
>>> reset()
>>> forward
<function forward at 0xb6a497f0>
>>> forward(100)
>>> right(72)
>>> clear()
>>> reset()
>>> forward(110)
>>> right(72)
>>> forward(110)
>>> right(72)
>>> forward(110)
>>> right(72)
>>> forward(110)
>>> right(72)
>>> forward(110)
>>> right(72)
>>> reset()
>>> forward(100)
>>> left(90)
>>> forward(100)
>>> left(90)
>>> forward(100)
>>> left(90)
>>> forward(100)
>>> 
>>> left(90)
>>> left(45)
>>> forward(50)
>>> right(90)
>>> forward(50)
>>> reset()
>>> up()
>>> for i in range (4)
  File "<stdin>", line 1
    for i in range (4)
                     ^
SyntaxError: invalid syntax
>>> for i in range(5):
...     forward(50)
...     left(360/5)
... 
>>> 
>>> down
<function down at 0xb6a49670>
>>> down()
>>> for i in range(5):
...     forward(50)
...     left(360/)
  File "<stdin>", line 3
    left(360/)
             ^
SyntaxError: invalid syntax
>>> for i in range(5)

Traceback (most recent call last):
  File "/usr/lib/python2.7/encodings/utf_8.py", line 15, in decode
    def decode(input, errors='strict'):
KeyboardInterrupt
>>> for i in range(5)
  File "<stdin>", line 1
    for i in range(5)
                    ^
SyntaxError: invalid syntax
>>> for i in range (5):
...     forward(50)
...     left(360/5)
... 
>>> home()
>>> reset()
>>> hideturtle()
>>> forward()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: forward() takes exactly 1 argument (0 given)
>>> forward(5)
>>> forward(70)
>>> showturtle()
>>> penup()
>>> forwrd(90)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'forwrd' is not defined
>>> forward(90)
>>> pendown()
>>> forward(90)
>>> left(90)
>>> forward(90)
>>> left(90)
>>> forward(90)
>>> left(90)
>>> forward(90)
>>> left(90)
>>> reset()
>>> pendown()
>>> forward(80)
>>> right(60)
>>> forward(80)
>>> right(60)
>>> forward(80)
>>> right(60)
>>> forward(80)
>>> right(60)
>>> forward(80)
>>> right(60)
>>> forward(80)
>>> right(60)
>>> reset()
>>> forward(80)
>>> right(60)
>>> forward(80)
>>> right(120)
>>> forward(80)
>>> right(120)
>>> forward(80)
>>> right(60)
>>> forward(120)
>>> backward(40)
>>> right(150)
>>> forward(136)
>>> reset()
>>> forward(80)
>>> right(60)
>>> forward(80)
>>> right(120)
>>> forward(80)
>>> right(60)
>>> forward(120)
>>> backward(40)
>>> right(150)
>>> forward(136)
>>> penup()
>>> right(150)
>>> forward(80)
>>> right(120)
>>> pendown()
>>> forward(80)
>>> forward(100)
>>> left(45)
>>> right(25)
>>> left(10)
>>> forward(100)
>>> right(90)
>>> forward(25)
>>> right(45)
>>> forward(50)
>>> right(90)
>>> forward(50)
>>> right(45)
>>> forward(25)
>>> left(135)
>>> forward(100)
>>> left(45)
>>> forward(100)
>>> left(90)
>>> forward(100)
>>> forward(40)
>>> backward(40)
>>> backward(10)
>>> right(90)
>>> forward(50)
>>> left(90)
>>> froward(50)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'froward' is not defined
>>> forward(50)
>>> backward(100)
>>> backward(40)
>>> right(90)
>>> forwArd
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'forwArd' is not defined
>>> forward(50)
>>> left(90)
>>> forward(50)
>>> forward(25)
>>> right(90)
>>> penup()
>>> forward(20)
>>> pendown()
>>> forward(25)
>>> penup()
>>> forward(20)
>>> pendown()
>>> right(90)
>>> forward(50)
>>> forward(25)
>>> left(90)
>>> forward(25)
>>> forward(25)
>>> forward(25)
>>> left(90)
>>> forward(50)
>>> forward(50)
>>> forward(50)
>>> right(90)
>>> forward(50) 
>>> forward(50)
>>> backward(100)
>>> right(90)
>>> forward(50)
>>> forward(50)
>>> forward(50)
>>> left(90)
>>> forward(50)
>>> forward(50)
>>> left(90)
>>> forward(50)
>>> forward(25)
>>> left(90)
>>> forward(25)
>>> forward(25)
>>> penup()
>>> forward(1000)
>>> forward(8)
>>> pendown()
>>> forward(8)
>>> right(20)
>>> forward(8)
>>> right(20)
>>> forward(8)
>>> right(20)
>>> forward(8)
>>> right(20)
>>> forward(1000)
>>> 
